--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy": "npm run build && firebase deploy"
   },
   "dependencies": {
+    "@astrojs/node": "^9.1.3",
     "@types/leaflet": "^1.9.17",
     "astro": "^5.6.1",
     "leaflet": "^1.9.4"
